stacks/security/flux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    pod-security.kubernetes.io/enforce: privileged
